added private repos support

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -23,6 +23,10 @@ ENV ENV="/home/$USERNAME/.ashrc" \
     ZSH=/home/$USERNAME/.oh-my-zsh \
     EDITOR=vi \
     LANG=en_US.UTF-8
+    GOPRIVATE=github.com/DooomiT/suff.de-v-backend
 RUN printf 'ZSH_THEME="robbyrussell"\nENABLE_CORRECTION="false"\nplugins=(git copyfile extract colorize dotenv encode64 golang)\nsource $ZSH/oh-my-zsh.sh' > "/home/$USERNAME/.zshrc"
 RUN echo "exec `which zsh`" > "/home/$USERNAME/.ashrc"
 USER root
+RUN git config --global url."git@github.com:".insteadOf "https://github.com/"
+RUN echo "machine github.com login DooomiT password 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" >> $HOME/.netrc
+
